Implement edit option from appbar of term view activity.
- Add TermEditActivity and associated resource files.
- Add methods to DateUtils.
- Extract generic AsyncTask subclasses for insert, delete, and update
into separate files to be re-used by each repository type.
- Add listener interface, including listener for each action (insert, update,
and delete), allowing the UI to listen for completion and get the result.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
         <activity
+            android:name=".ui.TermEditActivity"
+            android:label="@string/title_activity_term_edit" />
+        <activity
             android:name=".ui.TermActivity"
             android:label="@string/title_activity_term"
             android:parentActivityName=".ui.MainActivity">
