--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,14 @@
                 android:value="com.clstephenson.mywgutracker.ui.MainActivity" />
         </activity>
         <activity
+            android:name=".ui.CourseActivity"
+            android:label="@string/title_activity_course"
+            android:parentActivityName=".ui.MainActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.clstephenson.mywgutracker.ui.MainActivity" />
+        </activity>
+        <activity
             android:name=".ui.MainActivity"
             android:label="@string/app_name"
             android:launchMode="singleTop"
