feat: Add assessment edit and refactor async tasks
- Add the initial activities and resources to edit assessments (crashes)
- Refactor async tasks to have a single task covering all types of DB actions
- Refactored the task result object to accept a data object if needed

Related issues: #5

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,10 @@
             android:label="@string/edit_term" />
         <activity
             android:name=".ui.CourseEditActivity"
-            android:label="@string/edit_term" />
+            android:label="@string/edit_course" />
+        <activity
+            android:name=".ui.AssessmentEditActivity"
+            android:label="@string/edit_assessment" />
         <activity
             android:name=".ui.TermActivity"
             android:label="@string/title_activity_term"
