--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,11 +41,11 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0-beta01'
     androidTestImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.0-alpha4'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-alpha4'
+    //androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-alpha4'
     // Robolectric environment
-    androidTestImplementation 'androidx.test:core:1.0.0'
+    //androidTestImplementation 'androidx.test:core:1.0.0'
     // Mockito framework
-    testImplementation 'org.mockito:mockito-core:1.10.19'
+    //testImplementation 'org.mockito:mockito-core:1.10.19'
 
     // Google Architecture - Room
     def room_version = "2.1.0-alpha04"
