feat: Add ability to view notes list from course activity
resolves: #7

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
             android:name=".ui.TermEditActivity"
             android:label="@string/edit_term" />
         <activity
+            android:name=".ui.NotesListActivity"
+            android:label="@string/course_notes" />
+        <activity
             android:name=".ui.CourseEditActivity"
             android:label="@string/edit_course" />
         <activity
