--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,14 @@
 apply plugin: 'com.android.application'
 
 android {
+    signingConfigs {
+        config {
+            keyAlias 'upload'
+            keyPassword 'password'
+            storeFile file('Z:/keystores/upload_keystore.jks')
+            storePassword 'password'
+        }
+    }
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.clstephenson.mywgutracker"
@@ -19,6 +27,7 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.config
         }
     }
     compileOptions {
@@ -36,7 +45,6 @@ dependencies {
     implementation 'com.google.android.material:material:1.0.0-beta01'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.2'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0-beta01'
-
     // Dependencies for testing
     implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0-beta01'
     androidTestImplementation 'junit:junit:4.12'
@@ -46,13 +54,11 @@ dependencies {
     //androidTestImplementation 'androidx.test:core:1.0.0'
     // Mockito framework
     //testImplementation 'org.mockito:mockito-core:1.10.19'
-
     // Google Architecture - Room
     def room_version = "2.1.0-alpha04"
     implementation "androidx.room:room-runtime:$room_version"
     annotationProcessor "androidx.room:room-compiler:$room_version"
     testImplementation "androidx.room:room-testing:$room_version"
-
     // Google Architecture - Lifecycle
     def lifecycle_version = "2.0.0"
     implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
