--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,12 +42,7 @@
         </activity>
         <activity
             android:name=".ui.CourseActivity"
-            android:label="@string/title_activity_course"
-            android:parentActivityName=".ui.MainActivity">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.clstephenson.mywgutracker.ui.MainActivity" />
-        </activity>
+            android:label="@string/title_activity_course" />
         <activity
             android:name=".ui.MainActivity"
             android:label="@string/app_name"
